refactor: room size 19x13 and one-cell camera